csdl/examples/invalid/ex_connections_false_cycle2.py
def example(Simulator):
    from csdl import Model
    import numpy as np
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.connect_within import ConnectWithin
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionVectorFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    from csdl.examples.models.concatenate import ConcatenateFunction
    from csdl.examples.models.concatenate import ConcatenateFunction
    from csdl.examples.models.addition import ParallelAdditionFunction
    from csdl.examples.models.addition import AdditionFunction
    
    
    class ErrorFalseCycle2(Model):
        # Adding variables and connecting them in a certain way may create false cycles
        # ***NOT SURE IF ERROR OR NOT?***
        # return error
    
        def define(self):
            # NOTE: Importing definitions within a method is bad practice.
            # This is only done here to automate example/test case
            # generation more easily.
            # When defining CSDL models, please put the import statements at
            # the top of your Python file(s).
            from csdl.examples.models.addition import AdditionFunction
    
            self.add(AdditionFunction(), name='model1', promotes=[])
            self.add(AdditionFunction(), name='model2', promotes=[])
    
            # This looks like a cycle because 'model2.f' is registered as an output after 'model1.f'.
            # However, these calculations can be done explicitly
            self.connect('model2.f', 'model1.a')
    
    
    sim = Simulator(ErrorFalseCycle2())
    sim.run()
    